--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 * {
 	transition: 150ms;
 	color: white;
+	font-size: 130%;
 }
 
 body {
@@ -11,22 +12,24 @@ body {
 canvas {
 	background: #2b2b2b; 
 	display: block; 
-	margin: 0 auto; 
+	margin: auto auto; 
+	transform: scale(1.2);
+	align-self: center;
 
 }
 
 .red {
-	animation: red 150ms;
+	animation: red 200ms;
 }
 
 @keyframes red {
 	from {
 		background: #2b2b2b;
-		transform: rotate(10deg);
+		transform: rotate(10deg) scale(1.2);
 	}
 	to {
 		background: #880000;
-		transform: rotate(0deg)
+		transform: rotate(0deg) scale(1.2);
 	}
 }
 
@@ -35,6 +38,6 @@ canvas {
 }
 
 @keyframes woosh {
-	from {transform: rotate(360deg)}
+	from {transform: rotate(360deg) scale(1.5)}
 	to {background: #008800;}
 }
